--- a/src/index.scss
+++ b/src/index.scss
@@ -100,35 +100,42 @@ section.products{
     
   }
 }
-div{
-  width: 100%;
-  height: 100%;
-}
-h3{
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29px;
-}
-p{
-  font-size: 16px;
-  line-height: 19px;
-  color: rgba(0,0,0,0.4);
-}
-button.btton{
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 19px;
-  width: 325px;
-  height: 55px;
-  background: #9DD558;
-  border-radius: 18px;
-  color: #fff;
+.favorites{
+  h3{
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+    padding: 24px 0 11px;
+  }
+  p{
+    font-size: 16px;
+    line-height: 19px;
+    color: rgba(0,0,0,0.4);
+    padding-bottom: 20px;
+  }
+  img{
+    padding-top: 155px;
+  }
+  button.btn{
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    width: 325px;
+    height: 55px;
+    background: #9DD558;
+    border-radius: 18px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid transparent;
+    svg{
+      transform: rotate(180deg);
+      margin-right: 24px;
+    }
+  }
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid transparent;
-  svg{
-    transform: rotate(180deg);
-    margin-right: 24px;
-  }
+  flex-direction: column;
 }
